--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+## User ##
+config/db
+config/log
+.DS_Store
+
 ### STS ###
 .apt_generated
 .classpath
