--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -4,7 +4,7 @@ spring:
       server:
         git:
           uri: https://github.com/creatorsventure/s02-cloud-config
-          search-paths: config/**
+          search-paths: properties/**
           defaultLabel: main
 
         vault:
