--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   cloud:
     vault:
       uri: http://localhost:8200
-      token: root
+      token: ${VAULT_TOKEN}
       kv:
         default-context: app-secret
         enabled: true
