--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -8,18 +8,18 @@ spring:
           defaultLabel: main
 
         vault:
-          host: localhost             # <-- Vault host
+          host: local.docker.vault    # <-- Vault host
           port: 8200                  # <-- Vault port
           scheme: http                # <-- use https in prod
           backend: secret             # <-- Vault secret engine
           default-key: app-secret     # <-- fallback context for all apps
           profile-separator: '-'      # <-- resolves secret/app-secret-dev, etc.
           authentication: TOKEN       # <-- required explicitly
-          token: root                 # <-- Vault token (dev-only)
+          token: ${VAULT_TOKEN}       # <-- Vault token (dev-only)
           kv-version: 2
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://local.docker.service-registry:8761/eureka
   instance:
-    hostname: localhost
+    hostname: local.docker.service-registry
