--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -11,7 +11,7 @@ spring:
           host: localhost             # <-- Vault host
           port: 8200                  # <-- Vault port
           scheme: http                # <-- use https in prod
-          backend: secret             # <-- Vault secret engine
+          backend: kv                 # <-- Vault secret or kv depends on vault engine
           default-key: app-secret     # <-- fallback context for all apps
           profile-separator: '-'      # <-- resolves secret/app-secret-dev, etc.
           authentication: TOKEN       # <-- required explicitly
