--- a/properties/s20-04-org-service/s20-04-org-service-test.yml
+++ b/properties/s20-04-org-service/s20-04-org-service-test.yml
@@ -1,5 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/uamdb
-    username: root
-    password: Root1234
+    url: jdbc:mysql://local.docker.mysql:3306/uamdb
+    # username:
+    # password:
+  data:
+    redis:
+      host: local.docker.redis
+      port: 6379
+      # password:
+      timeout: 60000
