--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -8,7 +8,7 @@ spring:
           defaultLabel: main
 
         vault:
-          host: localhost             # <-- Vault host
+          host: local.docker.vault    # <-- Vault host
           port: 8200                  # <-- Vault port
           scheme: http                # <-- use https in prod
           backend: kv                 # <-- Vault secret or kv depends on vault engine
@@ -20,6 +20,6 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://local.docker.service-registry:8761/eureka
   instance:
-    hostname: localhost
+    hostname: local.docker.service-registry
