--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,6 +1,31 @@
+spring:
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/creatorsventure/s02-cloud-config
+          search-paths: properties/**
+          defaultLabel: main
+
+        vault:
+          host: local.docker.vault    # <-- Vault host
+          port: 8200                  # <-- Vault port
+          scheme: http                # <-- use https in prod
+          backend: kv                 # <-- Vault secret or kv depends on vault engine
+          default-key: app-secret     # <-- fallback context for all apps
+          profile-separator: '-'      # <-- resolves secret/app-secret-dev, etc.
+          authentication: TOKEN       # <-- required explicitly
+          token: ${VAULT_TOKEN}       # <-- Vault token (dev-only)
+          kv-version: 2
+
 eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
   instance:
-    hostname: localhost
+    hostname: host.docker.internal   # 👈 for Docker-to-host routing
+    prefer-ip-address: false         # 👈 use hostname in registry
+    lease-renewal-interval-in-seconds: 10
+    lease-expiration-duration-in-seconds: 30
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://local.docker.service-registry:8761/eureka/
