--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 spring:
   cloud:
     vault:
-      uri: http://localhost:8200
+      uri: ${VAULT_URI}
       token: ${VAULT_TOKEN}
       kv:
         default-context: app-secret
