--- a/properties/s20-04-org-service/s20-04-org-service-dev.yml
+++ b/properties/s20-04-org-service/s20-04-org-service-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/uamdb
+    url: jdbc:mysql://localhost:3306/orgdb
     # username:
     # password:
   data:
