--- a/properties/s20-04-org-service/s20-04-org-service-test.yml
+++ b/properties/s20-04-org-service/s20-04-org-service-test.yml
@@ -9,3 +9,5 @@ spring:
       port: 6379
       # password:
       timeout: 60000
+  kafka:
+    bootstrap-servers: kafka:9092 # use the Docker Compose service name if in the same network
