--- a/properties/s20-04-org-service/s20-04-org-service.yml
+++ b/properties/s20-04-org-service/s20-04-org-service.yml
@@ -38,7 +38,7 @@ spring:
     redis:
       time-to-live: 60000
   kafka:
-    client-id: s20-04-org-service
+    client-id: ${spring.application.name}
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
