--- a/properties/generic/application.yaml
+++ b/properties/generic/application.yaml
@@ -45,3 +45,11 @@ management:
     web:
       exposure:
         include: "*"
+app:
+  kafka:
+    notify-service:
+      client-id: notify-service
+      topic: notify-service
+      group: notify-service-group
+    org-service:
+      client-id: org-service
