--- a/properties/s04-04-notify-service/s04-04-notify-service-dev.yml
+++ b/properties/s04-04-notify-service/s04-04-notify-service-dev.yml
@@ -16,4 +16,4 @@ spring:
     password: b7e94efd32a77e
   kafka:
     # List of Kafka broker addresses. Use Docker Compose service name if Notify runs in same Docker network
-    bootstrap-servers: kafka:9092
+    bootstrap-servers: localhost:9092
