--- a/properties/s04-04-notify-service/s04-04-notify-service.yml
+++ b/properties/s04-04-notify-service/s04-04-notify-service.yml
@@ -52,7 +52,10 @@ spring:
       auto-offset-reset: earliest
       enable-auto-commit: false
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
     listener:
       missing-topics-fatal: false
       ack-mode: manual
+    properties:
+      spring.deserializer.value.delegate.class: org.springframework.kafka.support.serializer.JsonDeserializer
+      spring.json.trusted.packages: "*"
