Updated KAFKA settings

--- a/properties/generic/application-dev.yaml
+++ b/properties/generic/application-dev.yaml
@@ -20,4 +20,5 @@ eureka:
 app:
   api-gateway:
     org-service:
-      reset-password-url: http://localhost:8080/api/org-service/password/reset-password?id=
+      activate-account-url: http://localhost:8080/api/org-service/password/activate-account?id=
+      reset-password-url: http://localhost:4200/authentication/reset-password
