--- a/properties/s03-cloud-gateway/s03-cloud-gateway-test.yml
+++ b/properties/s03-cloud-gateway/s03-cloud-gateway-test.yml
@@ -1,10 +1,10 @@
 cloud-gateway:
-  allowedOrigins:
+  allowed-origins:
     - "http://localhost:4200"
     - "http://localhost:4201"
-  urlPaths:
-    - "/api/org-service/user/count",
-    - "/api/org-service/sign-up",
-    - "/api/org-service/authentication/login",
-    - "/api/org-service/authentication/logout",
+  unauthenticated-paths:
+    - "/api/org-service/user/count"
+    - "/api/org-service/sign-up"
+    - "/api/org-service/authentication/login"
+    - "/api/org-service/authentication/logout"
     - "/api/org-service/authentication/refresh-token"
