Updated account activation settings

--- a/properties/s03-cloud-gateway/s03-cloud-gateway-dev.yml
+++ b/properties/s03-cloud-gateway/s03-cloud-gateway-dev.yml
@@ -10,3 +10,4 @@ cloud-gateway:
     - "/api/org-service/authentication/refresh-token"
     - "/api/org-service/password/activate-account"
     - "/api/org-service/password/reset-password"
+    - "/api/org-service/password/forgot-password"
