Updated Spring cloud bus

--- a/properties/s04-04-notify-service/s04-04-notify-service-dev.yml
+++ b/properties/s04-04-notify-service/s04-04-notify-service-dev.yml
@@ -14,3 +14,5 @@ spring:
     port: 587
     username: e944d00f050b4c
     password: b7e94efd32a77e
+  kafka:
+    bootstrap-servers: localhost:9092
