--- a/properties/s04-04-notify-service/s04-04-notify-service-dev.yml
+++ b/properties/s04-04-notify-service/s04-04-notify-service-dev.yml
@@ -1,11 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/notifydb
+    url: jdbc:mysql://local.mysql.docker:3306/notifydb
     # username:
     # password:
   data:
     redis:
-      host: localhost
+      host: local.redis.docker
       port: 6379
       # password:
       timeout: 60000
