--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -18,8 +18,7 @@ spring:
           token: ${VAULT_TOKEN}       # <-- Vault token (dev-only)
           kv-version: 2
   kafka:
-    bootstrap-servers: kafka:29092
-    # bootstrap-servers: localhost:9092
+    bootstrap-servers: localhost:9092
 
 eureka:
   instance:
