--- a/properties/s03-cloud-gateway/s03-cloud-gateway-dev.yml
+++ b/properties/s03-cloud-gateway/s03-cloud-gateway-dev.yml
@@ -1,6 +1,6 @@
 spring:
   kafka:
-    bootstrap-servers: kafka:29092
+    bootstrap-servers: localhost:9092
 cloud-gateway:
   allowed-origins:
     - "http://localhost:4200"
