--- a/properties/s03-cloud-gateway/s03-cloud-gateway.yml
+++ b/properties/s03-cloud-gateway/s03-cloud-gateway.yml
@@ -79,3 +79,30 @@ management:
       enabled: true
     ratelimiters:
       enabled: true
+#CORS
+cloud-gateway:
+  allowed-headers:
+    - "Authorization"
+    - "Content-Type"
+    - "X-Requested-With"
+    - "Origin"
+    - "Accept"
+    - "X-USER-ID"
+    - "X-USER-KEY"
+    - "X-USER-KEY"
+  exposed-headers:
+    - "Authorization"
+    - "Content-Type"
+    - "X-Requested-With"
+    - "Origin"
+    - "Accept"
+    - "X-USER-ID"
+  unauthenticated-paths:
+    - "/api/org-service/user/count"
+    - "/api/org-service/sign-up"
+    - "/api/org-service/authentication/login"
+    - "/api/org-service/authentication/logout"
+    - "/api/org-service/authentication/refresh-token"
+    - "/api/org-service/password/activate-account"
+    - "/api/org-service/password/reset-password"
+    - "/api/org-service/password/forgot-password"
