COMMIT 23-04-2025 Unit service changes

--- a/properties/generic/application.yaml
+++ b/properties/generic/application.yaml
@@ -66,3 +66,6 @@ app:
     org-service:
       client-id: org-service
       group: org-service-group
+    unit-service:
+      client-id: unit-service
+      group: unit-service-group
