--- a/properties/generic/application-dev.yaml
+++ b/properties/generic/application-dev.yaml
@@ -22,3 +22,6 @@ app:
     org-service:
       activate-account-url: http://localhost:4200/authentication/activate-account/
       reset-password-url: http://localhost:4200/authentication/reset-password/
+    unit-service:
+      activate-account-url: http://localhost:4300/authentication/activate-account/
+      reset-password-url: http://localhost:4300/authentication/reset-password/
