COMMIT 23-04-2025 OPEN API changes

--- a/properties/generic/application.yaml
+++ b/properties/generic/application.yaml
@@ -53,6 +53,10 @@ management:
       exposure:
         include: "*"
 app:
+  info:
+    author: Ramakrishna
+    email: ramakrishna@mail.com
+    description: Downstream service API definition.
   kafka:
     config-bus:
       topic: cloud-config-bus
