COMMIT 25-04-2025 UNIT SIGNUP EMAIL FIXES

--- a/properties/s03-cloud-gateway/s03-cloud-gateway.yml
+++ b/properties/s03-cloud-gateway/s03-cloud-gateway.yml
@@ -104,7 +104,10 @@ cloud-gateway:
     - "Accept"
     - "X-USER-ID"
     - "X-USER-KEY"
-    - "X-USER-KEY"
+    - "X-ORGANIZATION-ID"
+    - "X-UNIT-ID"
+    - "X-MERCHANT-ID"
+    - "X-SUPER-MERCHANT-ID"
   exposed-headers:
     - "Authorization"
     - "Content-Type"
