--- a/properties/s03-cloud-gateway/s03-cloud-gateway.yml
+++ b/properties/s03-cloud-gateway/s03-cloud-gateway.yml
@@ -125,6 +125,7 @@ cloud-gateway:
     - "/api/v1/org-service/password/forgot-password"
     - "/api/v1/unit-service/sign-up"
     - "/api/v1/unit-service/sign-up/verify-sign-up"
+    - "/api/v1/unit-service/sign-up/verify-otp"
     - "/api/v1/unit-service/authentication/login"
     - "/api/v1/unit-service/authentication/logout"
     - "/api/v1/unit-service/authentication/refresh-token"
