--- a/properties/generic/application-dev.yaml
+++ b/properties/generic/application-dev.yaml
@@ -23,5 +23,6 @@ app:
       activate-account-url: http://localhost:4200/authentication/activate-account/
       reset-password-url: http://localhost:4200/authentication/reset-password/
     unit-service:
+      login-url: http://localhost:4300/authentication
       activate-account-url: http://localhost:4300/authentication/activate-account/
       reset-password-url: http://localhost:4300/authentication/reset-password/
