COMMIT 25-04-2025 UNIT SIGNUP EMAIL FIXES

--- a/properties/s03-cloud-gateway/s03-cloud-gateway.yml
+++ b/properties/s03-cloud-gateway/s03-cloud-gateway.yml
@@ -17,6 +17,7 @@ spring:
           predicates:
             - Path=/api/v1/org-service/**
           filters:
+            - AddRequestHeader=Authorization, #{request.headers.Authorization}
             - name: CircuitBreaker
               args:
                 name: ORGServiceCircuitBreaker
@@ -26,6 +27,7 @@ spring:
           predicates:
             - Path=/api/v1/unit-service/**
           filters:
+            - AddRequestHeader=Authorization, #{request.headers.Authorization}
             - name: CircuitBreaker
               args:
                 name: UnitServiceCircuitBreaker
