COMMIT 25-04-2025 UNIT SIGNUP EMAIL FIXES

--- a/properties/s03-cloud-gateway/s03-cloud-gateway.yml
+++ b/properties/s03-cloud-gateway/s03-cloud-gateway.yml
@@ -106,8 +106,11 @@ cloud-gateway:
     - "X-USER-KEY"
     - "X-ORGANIZATION-ID"
     - "X-UNIT-ID"
+    - "X-UNIT-CODE"
     - "X-MERCHANT-ID"
+    - "X-MERCHANT-CODE"
     - "X-SUPER-MERCHANT-ID"
+    - "X-SUPER-MERCHANT-CODE"
   exposed-headers:
     - "Authorization"
     - "Content-Type"
