--- a/properties/s04-04-notify-service/s04-04-notify-service.yml
+++ b/properties/s04-04-notify-service/s04-04-notify-service.yml
@@ -46,13 +46,13 @@ spring:
     stream:
       bindings:
         springCloudBusInput:
-          group: ${app.kafka.notify-service.group}
+          group: ${app.notify-service.kafka.group}
 
   # Kafka
   kafka:
-    client-id: ${app.kafka.notify-service.client-id}
+    client-id: ${app.notify-service.kafka.client-id}
     consumer:
-      group-id: ${app.kafka.notify-service.group}
+      group-id: ${app.notify-service.kafka.group}
       auto-offset-reset: earliest
       enable-auto-commit: false
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
