--- a/properties/s30-04-unit-service/s30-04-unit-service.yml
+++ b/properties/s30-04-unit-service/s30-04-unit-service.yml
@@ -38,9 +38,9 @@ spring:
     stream:
       bindings:
         springCloudBusInput:
-          group: ${app.kafka.unit-service.group}
+          group: ${app.unit-service.kafka.group}
   kafka:
-    client-id: ${app.kafka.unit-service.client-id}
+    client-id: ${app.unit-service.kafka.client-id}
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
@@ -52,5 +52,5 @@ spring:
         retries: 3
         enable.idempotence: true
     consumer:
-      group-id: ${app.kafka.unit-service.group}
+      group-id: ${app.unit-service.kafka.group}
       auto-offset-reset: latest
