COMMIT 29-04-2025 UNIT SIGNUP EMAIL FIXES

--- a/properties/generic/application-dev.yaml
+++ b/properties/generic/application-dev.yaml
@@ -11,7 +11,7 @@ eureka:
     # Hostname here tells Eureka Server:
     #“When I (e.g., org-service, unit-service etc) register, please expose me with hostname host.docker.internal.”
     hostname: host.docker.internal   # 👈 for Docker-to-host routing
-    prefer-ip-address: true         # 👈 use hostname in registry
+    prefer-ip-address: false         # 👈 use hostname in registry
     lease-renewal-interval-in-seconds: 10
     lease-expiration-duration-in-seconds: 30
   client:
