COMMIT 29-04-2025 UNIT SIGNUP EMAIL FIXES

--- a/properties/s03-cloud-gateway/s03-cloud-gateway.yml
+++ b/properties/s03-cloud-gateway/s03-cloud-gateway.yml
@@ -103,7 +103,7 @@ cloud-gateway:
     - "Origin"
     - "Accept"
     - "X-USER-ID"
-    - "X-USER-KEY"
+    - "X-USER-NAME"
     - "X-ORGANIZATION-ID"
     - "X-UNIT-ID"
     - "X-UNIT-CODE"
